--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Sartorius-EXSIM Service</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+
+    <!-- =====================================Thumbnail -->
+    <meta property="og:url" content="https://github.com/silverhyo/sartorius_service/">
+    <meta property="og:title" content="SARTORIUS - EXSIM Service">
+    <meta property="og:image" content="./thumbnail/thumbnail_exsim.jpg">
+    <meta property="og:description" content="Extractable 시뮬레이션 프로그램">
 
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
