--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 
     <!-- =====================================Thumbnail -->
-    <meta property="og:url" content="https://github.com/silverhyo/sartorius_service/">
+    <meta property="og:url" content="https://silverhyo.github.io/sartorius_service/">
     <meta property="og:title" content="SARTORIUS - EXSIM Service">
     <meta property="og:image" content="./thumbnail/thumbnail_exsim.jpg">
     <meta property="og:description" content="Extractable 시뮬레이션 프로그램">
